@@ -11,11 +11,11 @@
   <parent>
     <groupId>com.impactupgrade</groupId>
     <artifactId>nucleus-parent</artifactId>
-    <version>1.0.19.Final</version>
+    <version>2.0.0-SNAPSHOT</version>
   </parent>
 
   <artifactId>nucleus-engine</artifactId>
-  <version>3.4.0-SNAPSHOT</version>
+  <version>4.0.0-SNAPSHOT</version>
 
   <name>Nonprofit Nucleus: Engine</name>
   <description>TODO</description>
@@ -94,7 +94,6 @@
             <artifactId>maven-failsafe-plugin</artifactId>
             <version>2.22.2</version>
             <configuration>
-              <argLine>--enable-preview</argLine>
             </configuration>
             <executions>
               <execution>
